--- a/selfcare/src/app/components/home/home.html
+++ b/selfcare/src/app/components/home/home.html
@@ -44,7 +44,7 @@
   </div>
 
   <div class="img-footer">
-    <img src="assets/mastercard.png" class="master" />
+    <img src="../../../assets/mastercard.png" class="master" />
     <img src="assets/visa.png" class="visa" />
   </div>
 </div>
