--- a/selfcare/src/app/components/home/home.scss
+++ b/selfcare/src/app/components/home/home.scss
@@ -1,110 +1,245 @@
-.banner {
-  img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+
+.buttons-header {
+  button {
+    position: relative;
+    top: 2vw;
+    cursor: pointer;
+    margin: 6px;
+    right: 3vw;
+    border: none;
+    background-color: transparent;
+    color: #5CA720;
+    font-size: 13px;
+
+    &:hover {
+      color: #386D0D;
+    }
   }
 }
+
 
 
 .band-white {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  padding: 12px 30px;
-  background-color: white;
+  height: 80px;
 
   p {
-    font-weight: 600;
-    text-transform: uppercase;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+    font-family: 'Cabin';
+    font-size: 26px;
+    font-weight: 500;
+    position: relative;
+    top: 2vw;
+    left: 4vw;
+  }
+
+  @media screen and (max-width: 600px) {
+    height: 60px;
+    top: 2vw;
+    position: relative;
+
+    p {
+      font-size: 20px;
+    }
   }
 }
 
 
-.buttons-header {
-  display: flex;
-  gap: 15px;
 
-  button {
-    font-size: 1.2rem;
+.banner {
+  img {
+    width: 100%;
   }
 }
+
+
 
 .band-number-products {
   display: flex;
   justify-content: space-between;
-  padding: 10px 30px;
-  font-size: 14px;
 
-  .promotion {
-    font-weight: bold;
+  p {
+    font-family: 'Lato';
+    font-size: 18px;
+    margin: 2rem;
+    color: #161616;
+
+    &.promotion {
+      font-weight: 600;
+      text-transform: uppercase;
+      font-size: 20px;
+    }
+  }
+
+  @media screen and (max-width: 600px) {
+    max-width: 540px;
+
+    p {
+      font-size: 15px;
+
+      &.promotion {
+        font-size: 15px;
+      }
+    }
   }
 }
 
+
+
 .line {
-  width: 100%;
-  height: 1px;
-  background-color: #e2e2e2;
-  margin: 0 auto;
+  top: 0.1vw;
+  position: relative;
+  height: 0.1px;
+  background-color: #DFD9D9;
 }
+
 
 
 .grid-products {
-  padding: 30px;
+  position: relative;
+  top: 2vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-  .products {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-    gap: 20px;
 
-    img {
-      width: 100%;
-      height: auto;
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 140px;
+  grid-row: 13px;
+  grid-auto-rows: 400px;
+
+  img {
+    width: 320px;
+    height: 370px;
+    border-radius: 5px;
+
+    &:hover {
+      opacity: 0.95;
+      -webkit-transition: opacity 0.35s;
+      transition: opacity 0.35s, transform 0.35s;
+      -webkit-transform: scale3d(1.05,1.05,1);
+      transform: scale3d(1.05,1.05,1);
     }
+  }
 
-    p {
-      text-align: center;
-      font-size: 14px;
+  p {
+    font-family: 'Lato';
+    font-weight: 500;
+    margin: 8px;
 
-      &.price {
-        font-weight: bold;
-      }
+    &.price {
+      color: #5CA720;
+      font-weight: 700;
+    }
+  }
+
+  @media screen and (max-width: 1024px),
+  screen and (max-width: 768px),
+  screen and (max-width: 600px) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 5vw;
+  }
+
+  @media screen and (max-width: 280px) {
+    img {
+      width: 90%;
+      left: 4vw;
+      position: relative;
     }
   }
 }
 
+
+
 .footer {
-  padding: 30px;
-  text-align: center;
+  height: 348px;
+  background-color: #E3E3E3;
+  top: 10vw;
+  position: relative;
 
   button {
-    margin-bottom: 10px;
-    font-size: 14px;
+    background-color: transparent;
+    font-family: 'Lato';
+    border: none;
+    cursor: pointer;
+    color: #161616;
+    font-weight: 600;
+    font-size: 15px;
+    margin: 5px;
+    position: relative;
+    top: 3vw;
+    left: 8vw;
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      background-color: #5CA720;
+      color: white;
+    }
   }
+}
 
-  .buttons-footer {
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    gap: 15px;
 
-    i {
-      font-size: 1.2rem;
+
+.buttons-footer {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: relative;
+  top: 3vw;
+
+  button {
+    font-size: 30px;
+    color: #5CA720;
+
+    a {
+      color: inherit;
+    }
+
+    &:hover {
+      background-color: transparent;
+      color: #386D0D;
+    }
+  }
+}
+
+
+
+.img-footer {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  position: relative;
+  top: 3vw;
+  right: 5vw;
+
+  img {
+    margin: 10px;
+
+    &.master {
+      left: 2vw;
+      position: relative;
+      width: 54px;
+      height: 40px;
+    }
+
+    &.visa {
+      left: 2vw;
+      width: 50px;
+      height: 20px;
+      position: relative;
     }
   }
 
-  .img-footer {
-    margin-top: 20px;
-
-    img {
-      height: 30px;
-
-      &.master {
-        margin-right: 10px;
-      }
-    }
+  @media screen and (max-width: 600px) {
+    position: relative;
+    top: 28vw;
   }
 }
